<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoricScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/historic_screen_description" >

        <LinearLayout
            android:id="@+id/verticalItems"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="80dp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            android:divider="@drawable/divider"
            android:showDividers="middle" >

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/fixedMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:src="@drawable/home"
            android:contentDescription="@string/home"
            app:tint="@color/white"
            style="@style/menuButtonStyle"
            android:onClick="onListItemsClick" />

        <ImageButton
            android:src="@drawable/cart"
            android:contentDescription="@string/historic"
            app:tint="@color/white"
            style="@style/menuButtonStyle" />

        <ImageButton
            android:src="@drawable/maps"
            android:contentDescription="@string/maps"
            app:tint="@color/white"
            style="@style/menuButtonStyle"
            android:onClick="onMapClick" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>