<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsScreen">

<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsScreen" />

    <LinearLayout
        android:id="@+id/fixedMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:src="@drawable/home"
            android:contentDescription="@string/home"
            app:tint="@color/white"
            style="@style/menuButtonStyle" />

        <ImageButton
            android:src="@drawable/cart"
            android:contentDescription="@string/historic"
            app:tint="@color/white"
            style="@style/menuButtonStyle" />

        <ImageButton
            android:src="@drawable/maps"
            android:contentDescription="@string/maps"
            app:tint="@color/white"
            style="@style/menuButtonStyle"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
