<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/verticalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="10dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="10dp">

                <EditText
                    android:id="@+id/inputItem"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_toStartOf="@id/floatingActionButton"
                    android:hint="@string/main_input_placeholder"
                    android:inputType="textShortMessage" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:backgroundTint="@color/blue500"
                    android:clickable="true"
                    android:contentDescription="@string/main_button_description"
                    android:focusable="true"
                    android:onClick="onAddItem"
                    android:src="@drawable/plus_white"
                    app:tint="@color/white" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/verticalItems"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="80dp"
                app:layout_constraintTop_toTopOf="parent">

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/fixedMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:src="@drawable/home"
            android:contentDescription="@string/home"
            app:tint="@color/white"
            style="@style/menuButtonStyle" />

        <ImageButton
            android:src="@drawable/cart"
            android:contentDescription="@string/historic"
            app:tint="@color/white"
            style="@style/menuButtonStyle"
            android:onClick="onHistoricClick" />

        <ImageButton
            android:src="@drawable/maps"
            android:contentDescription="@string/maps"
            app:tint="@color/white"
            style="@style/menuButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>